--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,7 +1,7 @@
 [Date]
 date.timezone = "Asia/Tokyo"
 [mbstring]
-mbstring.internal_encoding = "UTF-8"
+;mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
 [opcache]
 opcache.memory_consumption=128
